# sc_target_evidence

./: .gitignore  .pre-commit-config.yaml  DATA_INFO.md  LICENSE  OR_analysis.ipynb  OT_scDisease_overlap.ipynb  README.md  Untitled.ipynb  cellxgene_census_stats.ipynb  process_sc_data.ipynb  pyproject.toml  sc-target-evidence-env.yaml  untitled.md
analysis/: Load_explore_json_direct_associations_03142024.ipynb  Nelson_ct_markers.ipynb  OR_analysis.ipynb  OR_association_analysis.ipynb  OT_scDisease_overlap.ipynb  README.md  celltype_specific_analysis_revision.ipynb  cellxgene_census_stats.ipynb  cellxgene_census_stats_v2.ipynb  cellxgene_census_stats_v3.ipynb  disease_specific_analysis_revision.ipynb  drugs_OTplatform.ipynb  fine_vs_coarse.ipynb  get_ot_drugs.py  make_target_universe.py  merge_sc_disease_evidence_split_OT_03142024.ipynb  plots_final_03282024_share_version.Rmd
data/: DiseasesInformation_OpenTargets_06092023.csv  DiseasesInformation_OpenTargets_06142023.csv  DiseasesInformation_OpenTargets_10122023.csv  HLCA_annotation_DE_diseasebulk_MONDO_0002771.hvgs.csv  HLCA_annotation_DE_diseasebulk_MONDO_0005249.hvgs.csv  HLCA_annotation_DE_diseasebulk_MONDO_0009061.hvgs.csv  all_CellOntologies.csv  all_diseaseIDs.txt  all_diseases_postqc.csv  association_scores_individual_drugs_data_by_indication.csv  cellxgene_hsapiens_donor_metadata.csv  cellxgene_hsapiens_donor_metadata.disease_relevant_annotation.csv  ct_marker_evidence.celltypist.curated.csv  disease_ontology_tissue_donor_metadata.csv  disease_specific_analysis.OR_results.cell_type_specific.csv  disease_specific_analysis.OR_results.disease_cell_specific.csv  disease_specific_analysis.target_disease_table.preclinical_hvgs.csv  disease_specific_analysis.target_disease_table.preclinical_hvgs_dc_specific.csv  filtered_nelson_disease_relevant_tissues_07032024.clean.csv  filtered_nelson_disease_relevant_tissues_07032024.clean.drt_annotation.csv  suppl_table_4.disease_specific_analysis.odds_ratios.csv  (+9 more)
(+87 files in other folders)
